--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   },
   "dependencies": {
     "argon2": "^0.41.1",
+    "axios": "^1.7.9",
     "bcrypt": "^5.1.1",
     "body-parser": "^1.20.3",
     "cors": "^2.8.5",
@@ -18,7 +19,8 @@
     "mysql2": "^3.11.4",
     "nodemailer": "^6.9.16",
     "redis": "^4.7.0",
-    "sequelize": "^6.37.5"
+    "sequelize": "^6.37.5",
+    "qrcode": "^1.4.4"
   },
   "devDependencies": {
     "nodemon": "^3.1.7"
