--- a/package.json
+++ b/package.json
@@ -18,9 +18,11 @@
     "multer": "^1.4.5-lts.1",
     "mysql2": "^3.11.4",
     "nodemailer": "^6.9.16",
+    "path": "^0.12.7",
+    "qrcode": "^1.4.4",
     "redis": "^4.7.0",
     "sequelize": "^6.37.5",
-    "qrcode": "^1.4.4"
+    "sharp": "^0.33.5"
   },
   "devDependencies": {
     "nodemon": "^3.1.7"
