--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "dotenv": "^16.4.5",
     "express": "^4.21.1",
     "express-rate-limit": "^7.4.1",
-    "firebase-admin": "^13.0.1",
+    "firebase-admin": "^13.4.0",
     "fluent-ffmpeg": "^2.1.3",
     "jsonwebtoken": "^9.0.2",
     "multer": "^1.4.5-lts.1",
@@ -25,6 +25,7 @@
     "sharp": "^0.33.5"
   },
   "devDependencies": {
-    "nodemon": "^3.1.7"
+    "nodemon": "^3.1.7",
+    "sequelize-cli": "^6.6.3"
   }
 }
