--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   },
   "dependencies": {
     "argon2": "^0.41.1",
-    "axios": "^1.7.9",
+    "axios": "^1.10.0",
+    "bakong-khqr": "^1.0.7",
     "bcrypt": "^5.1.1",
     "body-parser": "^1.20.3",
     "cors": "^2.8.5",
@@ -14,12 +15,13 @@
     "express-rate-limit": "^7.4.1",
     "firebase-admin": "^13.4.0",
     "fluent-ffmpeg": "^2.1.3",
+    "jimp": "^1.6.0",
     "jsonwebtoken": "^9.0.2",
     "multer": "^1.4.5-lts.1",
     "mysql2": "^3.11.4",
     "nodemailer": "^6.9.16",
     "path": "^0.12.7",
-    "qrcode": "^1.4.4",
+    "qrcode": "^1.5.4",
     "redis": "^4.7.0",
     "sequelize": "^6.37.5",
     "sharp": "^0.33.5"
@@ -27,5 +29,6 @@
   "devDependencies": {
     "nodemon": "^3.1.7",
     "sequelize-cli": "^6.6.3"
-  }
+  },
+  "packageManager": "pnpm@10.12.1+sha512.f0dda8580f0ee9481c5c79a1d927b9164f2c478e90992ad268bbb2465a736984391d6333d2c327913578b2804af33474ca554ba29c04a8b13060a717675ae3ac"
 }
