--- a/package.json
+++ b/package.json
@@ -6,7 +6,6 @@
   "dependencies": {
     "argon2": "^0.41.1",
     "aws-sdk": "^2.1536.0",
-    "multer-s3": "2.10.0",
     "axios": "^1.10.0",
     "bakong-khqr": "^1.0.7",
     "bcrypt": "^5.1.1",
@@ -20,8 +19,10 @@
     "jimp": "^1.6.0",
     "jsonwebtoken": "^9.0.2",
     "multer": "^1.4.5-lts.1",
+    "multer-s3": "2.10.0",
     "mysql2": "^3.11.4",
     "nodemailer": "^6.9.16",
+    "openai": "^5.8.2",
     "path": "^0.12.7",
     "qrcode": "^1.5.4",
     "redis": "^4.7.0",
