--- a/package.json
+++ b/package.json
@@ -27,7 +27,8 @@
     "qrcode": "^1.5.4",
     "redis": "^4.7.0",
     "sequelize": "^6.37.5",
-    "sharp": "^0.33.5"
+    "sharp": "^0.33.5",
+    "socket.io": "^4.8.1"
   },
   "devDependencies": {
     "nodemon": "^3.1.7",
