--- a/package.json
+++ b/package.json
@@ -16,6 +16,8 @@
     "express-rate-limit": "^7.4.1",
     "firebase-admin": "^13.4.0",
     "fluent-ffmpeg": "^2.1.3",
+    "fs": "^0.0.1-security",
+    "google-auth-library": "^10.2.0",
     "jimp": "^1.6.0",
     "jsonwebtoken": "^9.0.2",
     "multer": "^1.4.5-lts.1",
