--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
     "bcrypt": "^5.1.1",
     "body-parser": "^1.20.3",
     "cors": "^2.8.5",
+    "crypto": "^1.0.1",
     "dotenv": "^16.5.0",
+    "exceljs": "^4.4.0",
     "express": "^4.21.2",
     "express-rate-limit": "^7.4.1",
     "firebase-admin": "^13.4.0",
@@ -26,6 +28,7 @@
     "nodemailer": "^6.9.16",
     "openai": "^5.8.2",
     "path": "^0.12.7",
+    "pdfkit": "^0.17.1",
     "qrcode": "^1.5.4",
     "redis": "^4.7.0",
     "sequelize": "^6.37.5",
